# cxx_23_testing

./: .gitignore  CMakeLists.txt  README.md  meson.build
lib/fmt/: CMakeLists.txt
source/: cool.cpp  fish.cpp  main.cpp  test.cpp
source/test/: test.cpp
